--- a/views/layout.jade
+++ b/views/layout.jade
@@ -54,7 +54,7 @@ html(lang="en")
       block content
 
     script(src="/bower_components/mapbox.js/mapbox.js")
-    script(src="/bower_components/Leaflet.encoded/Polyline.encoded.js")
+    script(src="/bower_components/polyline/src/polyline.js")
     script(src="/bower_components/jquery/dist/jquery.min.js")
     script(src="/bower_components/underscore/underscore-min.js")
     script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
