Upgrade mapbox library

--- a/views/trips.jade
+++ b/views/trips.jade
@@ -9,6 +9,11 @@ block content
   .loading Loading...
 
 block scripts
+  script.
+    var mapboxAccessToken = '#{mapboxAccessToken}';
+
+  script(src="/bower_components/mapbox.js/mapbox.js")
+  
   script(type='text/template' id='tripTile')
     .trip.tile
       a(href="/trips/{{id}}")
