--- a/views/trip.jade
+++ b/views/trip.jade
@@ -6,6 +6,11 @@ block content
   .loading Loading...
 
 block scripts
+  script.
+    var mapboxAccessToken = '#{mapboxAccessToken}';
+
+  script(src="/bower_components/mapbox.js/mapbox.js")
+  
   script(type='text/javascript').
     var trip_id = "!{trip_id}";
 
