--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,38 @@
 extends layout
 
 block content
-  .panel.panel-default.sign-in
-    .panel-body.row
-      .col-md-4.col-md-offset-2.description 
-        h2 View Your Trips
-        p TripViewer shows trips taken with <a href="http://automatic.com" target="_blank">Automatic</a>.  See summary stats, inspect individual trips and export trips as .csv.
-      .col-md-6
-        a.center-block.btn.btn-primary.btn-lg(href="/authorize/") <span class="icon automatic-logo"></span>Sign in with Automatic
+  #summary
+
+    h2.pageTitle Summary
+    #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
+    .row
+      .col-sm-4(style="clear: both;")
+        #overall.panel.panel-default
+          .panel-heading Total Automatic Stats
+          .panel-body
+      .col-sm-8
+        #graphs.panel.panel-default
+          .panel-heading Weekly Driving
+          .panel-body
+            .btn-group.graph-buttons
+              button.btn.btn-default.active(type="button" data-graph-type="distance") Distance
+              button.btn.btn-default(type="button" data-graph-type="duration_s") Duration
+              button.btn.btn-default(type="button" data-graph-type="trip_count") Trips
+              button.btn.btn-default(type="button" data-graph-type="fuel_cost_usd") Fuel Cost
+              button.btn.btn-default(type="button" data-graph-type="fuel_volume_usgal") Fuel Volume
+
+            .graph
+
+  .loading Loading...
+
+block scripts
+  script(type="text/template" id='summaryList')
+    ul.list-group
+      li.list-group-item <span class="badge"><%- formatDistance(m_to_mi(distance_m)) %></span> Miles Driven
+      li.list-group-item <span class="badge"><%- formatDuration(duration_s) %></span> Duration
+      li.list-group-item <span class="badge"><%- trip_count %></span> Trip Count
+      li.list-group-item <span class="badge"><%- formatMPG(average_mpg) %></span> Average MPG
+      li.list-group-item <span class="badge"><%- formatFuelVolume(fuel_volume_usgal) %></span> Gallons of Fuel
+      li.list-group-item <span class="badge">$<%- formatFuelCost(fuel_cost_usd) %></span> Fuel Cost
+
+  script(src="/javascripts/summary.js")
