Simplify routes, move helpers and better errors

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,7 +43,7 @@ html(lang="en")
                     li
                       a#csv(href="/download/trips.csv" target="_blank") as .csv
                     li
-                      a#json(href="/download/trips.json" target="_blank") as JSON
+                      a#json(href="/api/trips/" target="_blank") as JSON
                       
               ul.nav.navbar-nav.navbar-right
                 li
