--- a/views/error.jade
+++ b/views/error.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  h1= message
+  h1= message || 'Unknown Error'
   h2= error.status
-  pre #{error.stack}
+  pre #{error.stack || JSON.stringify(error || {})}
     p #{description}
-  
   
