--- a/views/index.jade
+++ b/views/index.jade
@@ -1,27 +1,29 @@
 extends layout
 
 block content
-  #summary
+  .wrapper.content
+    #alert.alert
+    #summary
 
-    h2.pageTitle Summary
-    #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
-    .row
-      .col-sm-4(style="clear: both;")
-        #overall.panel.panel-default
-          .panel-heading Total Automatic Stats
-          .panel-body
-      .col-sm-8
-        #graphs.panel.panel-default
-          .panel-heading Weekly Driving
-          .panel-body
-            .btn-group.graph-buttons
-              button.btn.btn-default.active(type="button" data-graph-type="distance") Distance
-              button.btn.btn-default(type="button" data-graph-type="duration_s") Duration
-              button.btn.btn-default(type="button" data-graph-type="trip_count") Trips
-              button.btn.btn-default(type="button" data-graph-type="fuel_cost_usd") Fuel Cost
-              button.btn.btn-default(type="button" data-graph-type="fuel_volume_usgal") Fuel Volume
+      h2.pageTitle Summary
+      #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
+      .row
+        .col-sm-4(style="clear: both;")
+          #overall.panel.panel-default
+            .panel-heading Total Automatic Stats
+            .panel-body
+        .col-sm-8
+          #graphs.panel.panel-default
+            .panel-heading Weekly Driving
+            .panel-body
+              .btn-group.graph-buttons
+                button.btn.btn-default.active(type="button" data-graph-type="distance") Distance
+                button.btn.btn-default(type="button" data-graph-type="duration_s") Duration
+                button.btn.btn-default(type="button" data-graph-type="trip_count") Trips
+                button.btn.btn-default(type="button" data-graph-type="fuel_cost_usd") Fuel Cost
+                button.btn.btn-default(type="button" data-graph-type="fuel_volume_usgal") Fuel Volume
 
-            .graph
+              .graph
 
   .loading Loading...
 
