--- a/views/vehicles.jade
+++ b/views/vehicles.jade
@@ -1,10 +1,12 @@
 extends layout
 
 block content
-  h2.pageTitle Vehicles
-  #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
-  #vehicles
-  .loading Loading...
+  .wrapper.content
+    #alert.alert
+    h2.pageTitle Vehicles
+    #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
+    #vehicles
+    .loading Loading...
 
 block scripts
   script(type='text/template' id='singleVehicle')
