--- a/views/login.jade
+++ b/views/login.jade
@@ -14,7 +14,7 @@ block content
             .icon-integrations-arrows
             .logo-badge-tripviewer T
       #alert.alert
-      .row.border-both(class=automatic ? 'completed' : '')
+      .row.border-both
         .signin-instructions 
           .signin-text Authorize your Automatic account
         a.signin-btn(href="/authorize/") Authorize
