--- a/views/trip.jade
+++ b/views/trip.jade
@@ -37,5 +37,6 @@ block scripts
           .fuelCost {{fuel_cost_usd}}
           .durationOver70(class="{{speeding_class}}") {{speeding}}
         .startAddress {{start_address.cleaned}}
+      label.business-tag <input type="checkbox" {{business_tag}} /> Tag as business trip
 
   script(src="/javascripts/trip.js")
