Removed the github references

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,9 +9,9 @@ html(lang="en")
     link(rel="stylesheet" type="text/css" href="/css/style.css" media="screen")
     link(rel="stylesheet" type="text/css" href="/bower_components/mapbox.js/mapbox.css")
   body
-    .github-fork-ribbon-wrapper
-      .github-fork-ribbon
-        a(href="https://github.com/Automatic/tripviewer") Fork me on GitHub
+    // .github-fork-ribbon-wrapper
+    //  .github-fork-ribbon
+    //    a(href="https://github.com/Automatic/tripviewer") Fork me on GitHub
         
     .mainHeader
       .wrapper
